--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -98,7 +98,7 @@ $border-style: 2px solid $secondary-text-color;
 }
 
 .code-keywords {
-  background-color: #e8e8e8;
+  background-color: #F8F8F8;
   border-radius: $border-radius-size;
   padding: 0 5.591px;
   padding: 0 0.28rem;
